# levine-voice-ai

./: .gitignore  AGENTS.md  BANK_CALLER_DELIVERABLES.md  BANK_CALLER_SUMMARY.md  CLAUDE.md  List of Company Claim Numbers.xls.xlsx  PROJECT_STATUS.md  README.md  TODO.md  dispatch-rule-update.json  dispatch-rule.json  livekit.toml  pyproject.toml  update_dispatch.py
.claude/agents/: code-reviewer.md  conversation-designer.md  documentation-engineer.md  fullstack-developer.md  insurance-specialist.md  livekit-expert.md  llm-architect.md  prompt-engineer.md  python-pro.md  qa-expert.md  task-distributor.md  telephony-expert.md
.claude/commands/: swarm.md
.github/: AGENTS.md
.github/workflows/: AGENTS.md  tests.yml
docs/: AGENTS.md  ARCHITECTURE.md  BANK_CALLER_DIALOG_FLOW.txt  BANK_CALLER_FLOW.md  BANK_CALLER_IMPLEMENTATION.md  BANK_CALLER_QUICK_REFERENCE.md  BANK_CALLER_REFERENCE_CARD.txt  BASE_ROUTING_AGENT_DESIGN.md  CALL_FLOW_UX_AUDIT.md  LATENCY_AUDIT.md  LATENCY_TUNING.md  LIVEKIT_USAGE_AUDIT.md  OBSERVABILITY_AUDIT_REPORT.md  OPERATIONS.md  PROMPT_ENGINEERING_AUDIT.md  REVIEW_AUDIT_REPORT.md  TEST_RESTRUCTURING_PLAN.md
src/: AGENTS.md  __init__.py  agent.py  base_agent.py  business_hours.py  constants.py  instruction_templates.py  main.py  models.py  staff_directory.py  utils.py
src/agents/: AGENTS.md  __init__.py  after_hours.py  assistant.py  cancellation.py  changes.py  claims.py  coverage.py  mortgagee.py  payment.py  quote.py  something_else.py
src/tasks/: AGENTS.md  __init__.py  collect_contact.py  phone_collection.py
tests/: AGENTS.md  conftest.py  test_agent.py  test_business_hours.py  test_staff_directory.py  test_utils.py
tests/integration/: AGENTS.md  conftest.py  test_after_hours.py  test_cancellation_flow.py  test_change_flow.py  test_claims_flow.py  test_coverage_rate.py  test_greeting.py  test_mortgagee_cert.py  test_no_repetition.py  test_payment_flow.py  test_quote_flow.py  test_security.py  test_something_else.py
tests/unit/: AGENTS.md  conftest.py  test_agent_instructions.py  test_caller_info.py  test_carrier_claims.py  test_client_feedback_round4.py  test_collect_contact_task.py  test_environment.py  test_format_email_for_speech.py  test_handoff_speech.py  test_is_transferable.py  test_lunch_hour.py  test_mask_email.py  test_phone_collection.py  test_phone_validation.py  test_remediation_acceptance.py  test_route_logging.py
